2016-03-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (e_is_addr_in_emem): Use right type
	for memory segment.

2016-02-18  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/src/e-read.c (main): Remove call to
	e_reset_system().
	* e-utils/src/e-write.c (main): Likewise.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-utils/Makemodule.am: Add e-dump-regs target.
	* e-utils/src/e-dump-regs.c: New file.

2016-02-16  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-shm-manager.c (e_shm_init_native): Fill in
	shm_alloc struct.
	* e-hal/src/epiphany-hal.c (e_init): Call e_shm_init() again.

2016-02-15  Ola Jeppsson  <ola@adapteva.com>

	* bsps/parallella64/platform.hdf (ESYS_REGS_BASE): Remove.
	(EMEM_BASE_ADDRESS): Use mesh address.
	* bsps/parallella_E16G3_1GB/parallella_E16G3_1GB.hdf: Likewise.
	* e-hal/src/epiphany-hal-api-local.h: Update EPIPHANY_DEV.
	* e-hal/src/epiphany-hal-data-local.h (e_platform_t): Remove
	regs_base member.
	* e-hal/src/epiphany-hal.c (struct target_ops): Remove
	ee_read_esys and ee_write_esys members.
	(e_init): Comment out call to e_shm_init().
	(e_finalize): Remove call ee_disable system().
	(ee_read_esys_esim): Remove.
	(ee_read_esys_native): Remove.
	(ee_read_esys): Remove.
	(ee_write_esys_esim): Remove.
	(ee_write_esys_native): Remove.
	(ee_write_esys): Remove.
	(disable_nsw_elinks): Remove.
	(enable_clock_gating): Remove.
	(e_reset_system_native): Use new kernel ABI.
	(ee_disable_system): Remove.
	(ee_parse_simple_hdf): Make ESYS_REGS_BASE entries no-ops.
	* e-utils/src/e-hw-rev.c (main): Use dummy value for version
	reg

2015-12-21  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (clear_sram): Take sram size from first chip in
	e_platform structure.
	* e-hal/src/epiphany-hal-data-local.h: Add E_ESIM chip, and
	E_PARALLELLASIM platform.
	* e-hal/src/epiphany-hal.c (e_init): Use chip configuration from
	simulator configuration when target is esim.
	(ee_hdf_from_sim_cfg): Implemented.
